[package]
name = "create_font_sheet"
version = "0.1.0"
authors = ["Duncan <reallyconnected@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.2"
argparse = "0.2.2"
image = { version = "0.23", default-features = false, features = ["png"] }
imageproc = "0.22.0"
indexmap = "1.6.2"